--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/image": "^1.10.0",
     "@nuxtjs/seo": "^3.1.0",
     "@tailwindcss/vite": "^4.1.11",
+    "gsap": "^3.13.0",
     "nuxt": "^3.17.6",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
